--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="painel-esq">
             <div class="logo-box">
-                <img src="../static/img/logo-sf.png" alt="Kronos Logo">
+                <img src="../static/img/logo-sf.png" alt="Kronos Logo" draggable="false">
                 <p class="slogan">Gestão inteligente do tempo.</p>
             </div>
         </div>
