--- a/ponto/templates/home.html
+++ b/ponto/templates/home.html
@@ -2,7 +2,7 @@
 {% block conteudo %}
 <div class="ponto-container">
     <div class="nav-home">
-        <button class="login-btn">Login</button>
+        <a href="/login"><button class="login-btn">Login</button></a>
     </div>
     
     <div class="clock" id="clock">
