--- a/adm/templates/adm.html
+++ b/adm/templates/adm.html
@@ -3,7 +3,7 @@
 {% block conteudo %}
 <div class="admin-container">
     <div class="top-bar">
-        <button onclick="logout()" class="logout-btn">Logout</button>
+        <a href="{{ url_for('login.logout') }}"><button class="logout-btn" onclick="return confirm('Tem certeza que deseja sair?')">Logout</button></a>
     </div>
 
     <nav class="admin-nav">
