--- a/adm/templates/base-adm.html
+++ b/adm/templates/base-adm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/stylesheetAdm.css">
+    <link rel="stylesheet" href="../../static/css/adm/stylesheet.css">
     <link rel="shortcut icon" href="../static/img/kronos_favicon.ico" type="image/x-icon">
     <title>Kronos-Administração</title>
 </head>
