--- a/ponto/templates/base-ponto.html
+++ b/ponto/templates/base-ponto.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/stylesheet.css">
-    <link rel="shortcut icon" href="../static/img/kronos_favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../../static/css/ponto/stylesheet.css"> 
+    <link rel="shortcut icon" href="../../static/img/favicon.png" type="image/x-icon">
     <title>Kronos</title>
 </head>
 <body>
     <div class="main-container">
-        {% block conteudo %}
+        {% block conteudo %} 
         {% endblock %}
     </div>
-    <footer>
-        
-    </footer>
 </body>
 </html>
