--- a/static/css/login/stylesheet.css
+++ b/static/css/login/stylesheet.css
@@ -6,6 +6,7 @@ body, html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: 100%;
     background: linear-gradient(135deg, #0f1c3f, #1c4f88);
+
 }
 
 .ponto-container{
@@ -99,6 +100,21 @@ body, html {
     color: #c0dfff;
 }
 
+a.link-login {
+    display: inline-block;
+    margin-top: 10px;
+    color: #4da3ff; /* Azul claro */
+    font-size: 0.9rem;
+    font-weight: 500;
+    text-decoration: none;
+    transition: color 0.3s ease, text-shadow 0.3s ease;
+  }
+  
+  a.link-login:hover {
+    color: #78c2ff; /* Azul mais claro ao passar o mouse */
+    text-shadow: 0 0 5px rgba(120, 194, 255, 0.6); /* Brilho leve */
+  }  
+
 .button-container {
     display: flex;
     justify-content: flex-end;
@@ -144,6 +160,7 @@ body {
 
 .seconds {
     font-size: 4rem;
+    margin-bottom: 0.5rem;
 }
 
 .separadorg{
@@ -151,7 +168,7 @@ body {
 }
 .separador{
     font-size: 4rem;
-    margin: 0px 10px 0px;
+    margin: 0px 10px 0.5rem 0px;
 }
 
 .box-ponto{
