--- a/static/css/ponto/stylesheet.css
+++ b/static/css/ponto/stylesheet.css
@@ -115,3 +115,8 @@ html {
 .form-ponto button:hover {
     background-color: #156ea6;
 }
+
+.msg {
+    display: flex;
+    justify-content: center;
+}
