--- a/adm/templates/editar.html
+++ b/adm/templates/editar.html
@@ -24,11 +24,6 @@
         <input type="email" name="email" value="{{ admin.Email if admin else '' }}" {% if admin %}readonly{% endif %}>
     </div>
 
-    <div class="form-group">
-        <label>Senha</label>
-        <input type="password" name="senha" placeholder="Digite nova senha (opcional)">
-    </div>
-
     <div class="form-group short">
         <label>Ativo?</label>
         <select name="ativo">
@@ -38,8 +33,8 @@
     </div>
 
     <div class="form-actions">
+        <a href="{{ url_for('adm.consultar') }}"><button type="button">Voltar</button></a>
         <button type="submit">Salvar Alterações</button>
-        <a href="{{ url_for('adm.consultar') }}"><button type="button">Cancelar</button></a>
     </div>
 </form>
 
